Added JS and Confidence section completed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li class="lg:h-[60vh]">
                     <div
                         class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
-                        <img src="./Asset/Images/lamborghiniBanner.jpg" alt="" uk-cover>
+                        <img src="./Asset/Images/Range-Rover.jpg" alt="" uk-cover>
 
 
                     </div>
@@ -75,7 +75,7 @@
                 <li class="lg:h-[60vh]">
                     <div
                         class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-top-right">
-                        <img src="./Asset/Images/mclarenBanner.jpg" alt="" uk-cover>
+                        <img src="./Asset/Images/BMW-7.jpg" alt="" uk-cover>
 
                     </div>
                     <div class="uk-position-center uk-position-small uk-text-center uk-light w-[60%] mx-auto">
@@ -98,7 +98,7 @@
                 <li class="lg:h-[60vh]">
                     <div
                         class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-bottom-left">
-                        <img src="./Asset/Images/MustangBanner.jpg" alt="" uk-cover>
+                        <img src="./Asset/Images/shelby1.jpg" alt="" uk-cover>
 
                     </div>
                     <div class="uk-position-center uk-position-small uk-text-center uk-light w-[60%] mx-auto">
@@ -285,7 +285,7 @@
 
         <div class="mt-20 bg-cover bg-center " style="background-image: url('./Asset/Images/ferrariBanner.jpg');">
             <div
-                class="container mx-auto w-11/12 md:w-11/12 lg:w-8/12  p-2 grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3">
+                class="container mx-auto w-11/12 md:w-11/12 lg:w-8/12  p-2 grid gap-5 grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3">
                 <!-- Card 1 -->
                 <div class="card bg-white p-10">
                     <div class="w-20 h-20 mx-auto">
@@ -293,7 +293,7 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl font-semibold mb-2">Express Oil Change</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>Quick and efficient oil change service</li>
                             <li>keeping your engine running smoothly</li>
                         </ul>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="p-4">
                         <h1 class="text-xl text-white font-semibold mb-2">Tire Rotation & Balancing</h1>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>Ensure even tire wear and optimal handling</li>
                             <li>rotating and balancing your tires regularly</li>
                         </ul>
@@ -323,7 +323,7 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl font-semibold mb-2">Diagnostic Scan & Analysis</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>State-of-the-art diagnostic tools</li>
                             <li>resolve any issues with your car's electronic systems</li>
                         </ul>
@@ -338,7 +338,7 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl text-white font-semibold mb-2">Full Vehicle Detailing</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>Comprehensive interior and exterior cleaning</li>
                             <li>Restore your car's shine and freshness.</li>
                         </ul>
@@ -353,7 +353,7 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl font-semibold mb-2">Brake System Inspection & Repair</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>Thorough examination and repair</li>
                             <li>Guarantee safe stopping.</li>
                         </ul>
@@ -369,7 +369,7 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl text-white font-semibold mb-2">Air Conditioning Service</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>Diagnose and repair</li>
                             <li>ensuring a comfortable ride in any weather.</li>
                         </ul>
@@ -385,7 +385,7 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl font-semibold mb-2">Suspension & Steering Check</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>Expert inspection</li>
                             <li>steering components for a smooth and stable ride.</li>
                         </ul>
@@ -401,7 +401,7 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl text-white font-semibold mb-2">Car Inspection</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>A comprehensive inspection</li>
                             <li>uncover any potential issues.</li>
                         </ul>
@@ -416,13 +416,15 @@
                     </div>
                     <div class="p-4">
                         <h2 class="text-xl font-semibold mb-2">Battery Health Check & Replacement</h2>
-                        <ul class="mb-2">
+                        <ul class="mb-2 text-left text-justify list-disc">
                             <li>Thorough assessment of your car's battery health</li>
                             <li>high-quality options to ensure reliable starting power.</li>
                         </ul>
 
                     </div>
                 </div>
+
+
 
             </div>
 
@@ -431,6 +433,97 @@
             <button class="btn1 w-full shadow-md shadow-black py-4 ">Take an Appointment</button>
 
         </div>
+        <div class="text-left my-20 px-20 underline-container ">
+            <h1 class=" animated-underline1 lg:text-5xl md:text-4xl sm:text-3xl max-[425px]:text-3xl text-left mb-10">
+                <span class="underline-text">Drive with confidence After our:</span>
+                Expert Replairs
+            </h1>
+
+        </div>
+        <div class="my-20 w-[96%] md:w-[95%] lg:w-10/12 mx-auto">
+            <h1 class="text-2xl md:text-3xl lg:text-4xl text-left w-full font-semibold">Handeled With Care, Repaired
+                with passion</h1>
+            <div class=" flex flex-col md:flex-row lg:flex-row flex-wrap mx-10 items-center w-full my-10 px-5">
+                <div class="w-full md:w-[55%] lg:w-[55%]">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 my-10">
+
+
+                        <div
+                            class="p-6 bg-gray-100 w-60 h-60 flex flex-col items-start relative overflow-hidden shadow-lg">
+                            <div class="w-16 h-16 mb-2 transition-all duration-500 hover:scale-110">
+                                <img src="./Asset/ServiceIcons/car-engine.png" alt="parts">
+                            </div>
+                            <h1 class="font-semibold text-lg text-left">Quality Parts and Equipment</h1>
+                            <p class="mt-2 text-left">Get your new authentic parts</p>
+                            <div class="overlay absolute top-0 right-0"></div>
+                        </div>
+                        <div
+                            class="p-6 bg-gray-100 w-60 h-60 flex flex-col items-start relative overflow-hidden shadow-lg">
+                            <div class="w-16 h-16 mb-2 transition-all duration-500 hover:scale-110">
+                                <img src="./Asset/ServiceIcons/mechanic.png" alt="parts">
+                            </div>
+                            <h1 class="font-semibold text-lg text-left">Professional Engineer</h1>
+                            <p class="mt-2 text-left">Overall, professional Engineers play
+                            </p>
+                            <div class="overlay absolute top-0 right-0"></div>
+                        </div>
+                        <div
+                            class="p-6 bg-gray-100 w-60 h-60 flex flex-col items-start relative overflow-hidden shadow-lg">
+                            <div class="w-16 h-16 mb-2 transition-all duration-500 hover:scale-110">
+                                <img src="./Asset/ServiceIcons/open-24-hours.png" alt="parts">
+                            </div>
+                            <h1 class="font-semibold text-lg text-left">24/7 Friendly Services</h1>
+                            <p class="mt-2 text-left">Friendly services are Those that are</p>
+                            <div class="overlay absolute top-0 right-0"></div>
+                        </div>
+                    </div>
+                    <div class="w-[50%] mt-10">
+                        <div class="flex justify-between bg-[#e9e9e9] items-center ">
+                            <h1 class="text-2xl my-2">Customer Satisfication</h1>
+                            <p class="percent"><span id="satisfied"></span>%</p>
+                        </div>
+                        <div class="w-[40%] shadow-2xl h-4 rounded-xl bg-red-500" id="progressBar"></div>
+                    </div>
+                    <div class="flex w-[70%] justify-between  my-10 items-start">
+
+                        <button class="btn1 w-56 shadow-md shadow-black py-4 font-semibold text-lg">Read More
+                            <span class="text-xl">→</span></button>
+
+
+                        <div class="flex">
+                            <div class="w-16 h-16 p-3 bg-red-500 rounded-full">
+                                <img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt="">
+                            </div>
+                            <div class="text-left mx-3">
+                                <p>Emergency</p>
+                                <p class="text-xl font-semibold transition-all duration-500 hover:text-red-500">+12
+                                    (907) 555-0101</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-[45%] lg:w-[45%]">
+                    <div class="flex flex-col items-center">
+
+                        <div>
+                            <div class="relative w-[40em] h-[30em]">
+                                <img src="./Asset/Images/wash-5144822_1920.jpg" alt="" class="w-full h-full">
+                                <div
+                                    class="absolute shadow-2xl bottom-[10%] right-[10%] bg-white w-72 h-44 border-8 border-l-red-500 border-t-white border-b-red-500 border-r-white transition-all duration-500 hover:bg-red-500 hover:border-t-red-500  hover:border-r-red-500 hover:text-white flex flex-col items-center justify-center animatedBG px-5">
+                                    <p class="text-6xl font-bold">5625+</p>
+                                    <p class="text-left">Customers Happy with Our Services
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
         <!-- Customers Review Section -->
         <div class="text-left mt-20 px-20 underline-container ">
             <h1 class="animated-underline1 lg:text-5xl md:text-4xl sm:text-3xl max-[425px]:text-3xl text-left mb-10">
@@ -751,7 +844,7 @@
 
 
 
-
+        <script src="./script.js"></script>
 </body>
 
 </html>
