--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
             <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="#">Inventory</a>
             <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="#">About Us</a>
-            <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="#">Contact Us</a>
+            <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="./contact.html">Contact Us</a>
         </div>
         <div>
             <button class="btn1 hover:text-white hover:bg-[#ff0000] rounded-sm px-3 py-2">Sign In</button>
@@ -747,51 +747,8 @@
                 </div>
             </div>
         </div>
-        <!-- Contact US Section -->
-        <div class="text-left mt-20 px-20 underline-container ">
-            <h1 class="animated-underline1 lg:text-5xl md:text-4xl sm:text-3xl max-[425px]:text-3xl  text-left mb-10">
-                <span class="underline-text">Contact
-                    Our Expert Team</span>
-                for Your Luxury & Supercar Needs
-            </h1>
 
-        </div>
-        <div
-            class="w-9/12 mx-auto mt-20 flex lg:flex-row md:flex-col-reverse sm:flex-col max-[425px]:flex-col justify-evenly">
 
-            <div
-                class="lg:w-[50%] md:w-full sm:w-full max-[425px]:w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5">
-                <div class="bg-[#ff0000] text-white p-3 transition-all duration-300 hover:scale-105">
-                    <div class="w-[50%] p-3 mx-auto">
-                        <img class="w-full" src="./Asset/Contact/communities.png" alt="">
-                    </div>
-                    <p class="w-60 mx-auto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, at?</p>
-                </div>
-                <div class="bg-white p-3 transition-all duration-300 hover:scale-105">
-                    <div class="w-[50%] p-3 mx-auto">
-                        <img class="w-full" src="./Asset/Contact/customer-care.png" alt="">
-                    </div>
-                    <p class="w-60 mx-auto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, at?</p>
-                </div>
-                <div class="bg-white p-3 transition-all duration-300 hover:scale-105">
-                    <div class="w-[50%] p-3 mx-auto">
-                        <img class="w-full" src="./Asset/Contact/headset.png" alt="">
-                    </div>
-                    <p class="w-60 mx-auto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, at?</p>
-                </div>
-                <div class="p-3 bg-[#ff0000] text-white transition-all duration-300 hover:scale-105">
-                    <div class="w-[50%] p-3 mx-auto">
-                        <img class="w-full" src="./Asset/Contact/mails.png" alt="">
-                    </div>
-                    <p class="w-60 mx-auto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, at?</p>
-                </div>
-
-            </div>
-            <div class="lg:w-[50%] md:w-full sm:w-full max-[425px]:w-full p-10"><iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1047569.6405380806!2d2.1038609189354687!3d46.625330074081944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa97c37d2ff40d%3A0xadebcc907870616f!2sLUXURY%20CAR%20AUTO!5e0!3m2!1sen!2sbd!4v1690610315190!5m2!1sen!2sbd"
-                    width="100%" height="100%" style="border: 2;  top: 0; left: 0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-        </div>
         <!-- footerSection -->
         <div>
             <div class="mt-20 text-white p-20 grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 max-[425px]:grid-cols-1 gap-2"
