--- a/contact.html
+++ b/contact.html
@@ -39,17 +39,6 @@
             <button>Join Us</button>
         </div>
     </nav>
-    <!-- contactForm -->
-    <div class="mt-10 md:mt-14 lg:mt-20 w-full md:w-10/12 lg:w-9/12">
-        <div class="w-full md:w-[50%] lg:w-[50%]">
-
-        </div>
-        <div class="w-full md:w-[50%] lg:w-[50%]">
-
-        </div>
-    </div>
-
-    <!-- contactUs -->
     <div class="text-left mt-20 px-20 underline-container ">
         <h1 class="animated-underline1 lg:text-5xl md:text-4xl sm:text-3xl max-[425px]:text-3xl  text-left mb-10">
             <span class="underline-text">Contact
@@ -58,6 +47,103 @@
         </h1>
 
     </div>
+    <!-- contactForm -->
+    <div class="mt-10 md:mt-14 lg:mt-20 w-full md:w-10/12 lg:w-9/12 mx-auto flex flex-col md:flex-row lg:flex-row px-5">
+        <div class="w-full md:w-[50%] lg:w-[50%] ">
+            <h1 class="text-2xl md:text-3xl lg:text-5xl font-semibold text-center md:text-left lg:text-left my-5">Get
+                In Touch</h1>
+            <p class="text-left">is a phrase used to encourage communication, often between individuals or businesses,
+                to connect or
+                resolve issues.</p>
+
+            <div class="py-10">
+                <div class="flex justify-start mt-7">
+                    <div class="w-16 h-16 p-3 bg-red-500 rounded-full">
+                        <img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt="">
+                    </div>
+                    <div class="mx-5">
+                        <h1 class="text-left text-2xl font-semibold">Phone Call</h1>
+                        <p class=" text-xl text-left font-semibold transition-all duration-500 hover:text-red-500">+12
+                            (907) 555-0101</p>
+                    </div>
+                </div>
+                <div class="flex justify-start mt-7">
+                    <div class="w-16 h-16 p-3 bg-red-500 rounded-full">
+                        <img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt="">
+                    </div>
+                    <div class="mx-5">
+                        <h1 class="text-left text-2xl font-semibold">Drop Us An Email</h1>
+                        <p class=" text-xl text-left font-semibold transition-all duration-500 hover:text-red-500">
+                            needhelprepair@gmail.com</p>
+                    </div>
+                </div>
+                <div class="flex justify-start mt-7">
+                    <div class="w-16 h-16 p-3 bg-red-500 rounded-full">
+                        <img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt="">
+                    </div>
+                    <div class="mx-5">
+                        <h1 class="text-left text-2xl font-semibold">Location</h1>
+                        <p class=" text-xl text-left font-semibold transition-all duration-500 hover:text-red-500">
+                            Inglewood, Maine 98380</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="h-0.5 bg-gray-400 w-[80%]">
+            <div class="w-[80%] flex justify-start  items-center my-5">
+
+                <h1 class="text-left text-2xl font-semibold">Follow Us :</h1>
+                <div class="flex justify-evenly items-center">
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                    </div>
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                    </div>
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                    </div>
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-full md:w-[50%] lg:w-[50%] bg-white p-10">
+            <h1 class="text-2xl md:text-3xl lg:text-3xl font-semibold text-center md:text-left lg:text-left my-5">Send A
+                Message</h1>
+            <form action="">
+                <div class="flex justify-between my-3">
+                    <input type="text" class="border-2 p-3 w-[45%] border-red-500" placeholder="First Name">
+                    <input type="text" class="border-2 p-3 w-[45%] border-red-500" placeholder="Last Name">
+                </div>
+                <div class="my-3 w-full py-3">
+                    <select id="cars" name="cars" class="w-full p-3 ">
+                        <option value="volvo">Volvo</option>
+                        <option value="saab">Saab</option>
+                        <option value="mercedes">Mercedes</option>
+                        <option value="audi">Audi</option>
+                    </select>
+                </div>
+                <div>
+                    <textarea name="message" id="" cols="30" rows="6" class="w-full border-2 border-red-500 p-3"
+                        placeholder="Your Message Here"></textarea>
+                </div>
+                <div class="flex flex-col justify-start w-full md:w-[20%] lg:w-[30%] mt-3">
+                    <button
+                        class="btn1 border-2 border-red-500 hover:text-white hover:bg-[#ff0000] rounded-sm px-3 py-2">Submit
+                        Message</button>
+
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- contactUs -->
+
     <div
         class="w-9/12 mx-auto mt-20 flex lg:flex-row md:flex-col-reverse sm:flex-col max-[425px]:flex-col justify-evenly">
 
@@ -93,6 +179,52 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1047569.6405380806!2d2.1038609189354687!3d46.625330074081944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa97c37d2ff40d%3A0xadebcc907870616f!2sLUXURY%20CAR%20AUTO!5e0!3m2!1sen!2sbd!4v1690610315190!5m2!1sen!2sbd"
                 width="100%" height="100%" style="border: 2;  top: 0; left: 0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+    </div>
+    <!-- footerSection -->
+    <div>
+        <div class="mt-20 text-white p-20 grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 max-[425px]:grid-cols-1 gap-2"
+            style="
+                            background-image: url('./Asset/Images/footerBanner.jpg'); background-size: cover; background-position: center center;">
+            <div>
+                <span class="text-2xl underline font-semibold">Services</span>
+                <ul>
+                    <li><a href="#" target="_blank">Branding</a></li>
+                    <li><a href="#" target="_blank">Design</a></li>
+                    <li><a href="#" target="_blank">Design</a></li>
+                    <li><a href="#" target="_blank">Advertisement</a></li>
+                </ul>
+            </div>
+            <div>
+                <span class="text-2xl underline font-semibold">Legal</span>
+                <ul>
+                    <li><a href="#" target="_blank">Terms Of Service</a></li>
+                    <li><a href="#" target="_blank">Privacy Policy</a></li>
+                    <li><a href="#" target="_blank">Cookie Policy</a></li>
+                    <li><a href="#" target="_blank">Advertisement</a></li>
+                </ul>
+            </div>
+            <div>
+                <span class="text-2xl underline font-semibold">Social</span>
+                <ul>
+                    <li><a href="#" target="_blank">Twitter</a></li>
+                    <li><a href="#" target="_blank">Instagram</a></li>
+                    <li><a href="#" target="_blank">Facebook</a></li>
+                    <li><a href="#" target="_blank">Threads</a></li>
+                </ul>
+            </div>
+            <div>
+                <span class="text-2xl underline font-semibold">Company</span>
+                <ul>
+                    <li><a href="#" target="_blank">About Us</a></li>
+                    <li><a href="#" target="_blank">Contact Us</a></li>
+                    <li><a href="#" target="_blank">Jobs</a></li>
+                    <li><a href="#" target="_blank">Press kit</a></li>
+                </ul>
+
+            </div>
+        </div>
+
+
     </div>
 
 
