--- a/contact.html
+++ b/contact.html
@@ -115,10 +115,14 @@
         <div class="w-full md:w-[50%] lg:w-[50%] bg-white p-10">
             <h1 class="text-2xl md:text-3xl lg:text-3xl font-semibold text-center md:text-left lg:text-left my-5">Send A
                 Message</h1>
-            <form action="">
+            <form onsubmit="alert('Thank You')">
                 <div class="flex justify-between my-3">
-                    <input type="text" class="border-2 p-3 w-[45%] border-red-500" placeholder="First Name">
-                    <input type="text" class="border-2 p-3 w-[45%] border-red-500" placeholder="Last Name">
+                    <input type="text"
+                        class="transition-all duration-300 focus:outline-none focus:ring focus:ring-red-300 p-3 w-[45%]"
+                        placeholder="First Name">
+                    <input type="text"
+                        class="transition-all duration-300 focus:outline-none focus:ring focus:ring-red-300 p-3 w-[45%] "
+                        placeholder="Last Name">
                 </div>
                 <div class="my-3 w-full py-3">
                     <select id="cars" name="cars" class="w-full p-3 ">
@@ -129,11 +133,12 @@
                     </select>
                 </div>
                 <div>
-                    <textarea name="message" id="" cols="30" rows="6" class="w-full border-2 border-red-500 p-3"
+                    <textarea name="message" id="" cols="30" rows="6"
+                        class="w-full transition-all duration-300 focus:outline-none focus:ring focus:ring-red-300 p-3"
                         placeholder="Your Message Here"></textarea>
                 </div>
                 <div class="flex flex-col justify-start w-full md:w-[20%] lg:w-[30%] mt-3">
-                    <button
+                    <button type="submit"
                         class="btn1 border-2 border-red-500 hover:text-white hover:bg-[#ff0000] rounded-sm px-3 py-2">Submit
                         Message</button>
 
