--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,9 @@
 
     </div>
     <!-- contactForm -->
-    <div class="mt-10 md:mt-14 lg:mt-20 w-full md:w-10/12 lg:w-9/12 mx-auto flex flex-col md:flex-row lg:flex-row px-5">
-        <div class="w-full md:w-[50%] lg:w-[50%] ">
+    <div
+        class="mt-10 md:mt-14 lg:mt-20 w-full md:w-11/12 lg:w-10/12 mx-auto flex flex-col md:flex-row lg:flex-row justify-evenly">
+        <div class="w-full md:w-[40%] lg:w-[40%] ">
             <h1 class="text-2xl md:text-3xl lg:text-5xl font-semibold text-center md:text-left lg:text-left my-5">Get
                 In Touch</h1>
             <p class="text-left">is a phrase used to encourage communication, often between individuals or businesses,
@@ -57,8 +58,9 @@
                 resolve issues.</p>
 
             <div class="py-10">
-                <div class="flex justify-start mt-7">
-                    <div class="w-16 h-16 p-3 bg-red-500 rounded-full">
+                <div class="flex justify-start items-center mt-7">
+                    <div
+                        class="w-10 md:w-14 lg:w-14 h-10 md:h-14 lg:h-14 p-3 bg-red-500 rounded-full transition-all duration-500 hover:scale-110">
                         <img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt="">
                     </div>
                     <div class="mx-5">
@@ -68,8 +70,9 @@
                     </div>
                 </div>
                 <div class="flex justify-start mt-7">
-                    <div class="w-16 h-16 p-3 bg-red-500 rounded-full">
-                        <img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt="">
+                    <div
+                        class="w-10 md:w-14 lg:w-14 h-10 md:h-14 lg:h-14 p-3 bg-red-500 rounded-full transition-all duration-500 hover:scale-110">
+                        <img src=" ./Asset/ServiceIcons/email.png" class="w-full h-full" alt="">
                     </div>
                     <div class="mx-5">
                         <h1 class="text-left text-2xl font-semibold">Drop Us An Email</h1>
@@ -78,8 +81,9 @@
                     </div>
                 </div>
                 <div class="flex justify-start mt-7">
-                    <div class="w-16 h-16 p-3 bg-red-500 rounded-full">
-                        <img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt="">
+                    <div
+                        class="w-10 md:w-14 lg:w-14 h-10 md:h-14 lg:h-14 p-3 bg-red-500 rounded-full transition-all duration-500 hover:scale-110">
+                        <img src=" ./Asset/ServiceIcons/location.png" class="w-full h-full" alt="">
                     </div>
                     <div class="mx-5">
                         <h1 class="text-left text-2xl font-semibold">Location</h1>
@@ -95,24 +99,24 @@
                 <div class="flex justify-evenly items-center">
                     <div
                         class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
-                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                        <a href="#"><img src=" ./Asset/ServiceIcons/facebook.png" class="w-full h-full" alt=""></a>
                     </div>
                     <div
                         class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
-                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                        <a href="#"><img src=" ./Asset/ServiceIcons/instagram.png" class="w-full h-full" alt=""></a>
                     </div>
                     <div
                         class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
-                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                        <a href="#"><img src=" ./Asset/ServiceIcons/twitter.png" class="w-full h-full" alt=""></a>
                     </div>
                     <div
                         class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
-                        <a href="#"><img src=" ./Asset/ServiceIcons/call.png" class="w-full h-full" alt=""></a>
+                        <a href="#"><img src=" ./Asset/ServiceIcons/discord.png" class="w-full h-full" alt=""></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="w-full md:w-[50%] lg:w-[50%] bg-white p-10">
+        <div class="w-full md:w-[40%] lg:w-[40%] bg-white p-10">
             <h1 class="text-2xl md:text-3xl lg:text-3xl font-semibold text-center md:text-left lg:text-left my-5">Send A
                 Message</h1>
             <form onsubmit="alert('Thank You')">
@@ -137,7 +141,7 @@
                         class="w-full transition-all duration-300 focus:outline-none focus:ring focus:ring-red-300 p-3"
                         placeholder="Your Message Here"></textarea>
                 </div>
-                <div class="flex flex-col justify-start w-full md:w-[20%] lg:w-[30%] mt-3">
+                <div class="flex flex-col justify-start w-full md:w-full lg:w-[40%] mt-3">
                     <button type="submit"
                         class="btn1 border-2 border-red-500 hover:text-white hover:bg-[#ff0000] rounded-sm px-3 py-2">Submit
                         Message</button>
