--- a/contact.html
+++ b/contact.html
@@ -20,18 +20,18 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.22/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.22/dist/js/uikit-icons.min.js"></script>
-    <title>Document</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
     <!-- Navigation -->
     <nav class="lg:flex justify-between py-3 px-5 items-center mb-10 md:hidden sm:hidden max-[425px]:hidden">
-        <div>
-            <h1 class="text-2xl font-semibold">Luxury Auto</h1>
+        <div class="w-60">
+            <a href="./index.html"><img src="./Asset/Images/logo.png" class="w-full rounded-xl h-full" alt=""></a>
         </div>
         <div>
             <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="#">Inventory</a>
-            <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="#">About Us</a>
+            <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="./About.html">About Us</a>
             <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="./contact.html">Contact Us</a>
         </div>
         <div>
