partner section added

--- a/About.html
+++ b/About.html
@@ -25,6 +25,151 @@
 </head>
 
 <body>
+    <!-- Navigation -->
+    <nav class="lg:flex justify-between py-3 px-5 items-center  md:hidden sm:hidden max-[425px]:hidden">
+        <div class="w-60">
+            <a href="./index.html"><img src="./Asset/Images/logo.png" class="w-full rounded-xl h-full" alt=""></a>
+        </div>
+        <div>
+            <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="#">Inventory</a>
+            <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="./About.html">About Us</a>
+            <a class="mx-2 no-underline hover:no-underline hover:text-red-500" href="./contact.html">Contact Us</a>
+        </div>
+        <div>
+            <button class="btn1 hover:text-white hover:bg-[#ff0000] rounded-sm px-3 py-2">Sign In</button>
+            <button>Join Us</button>
+        </div>
+    </nav>
+    <!-- bannerSection -->
+    <div id="aboutBanner" class="">
+        <div
+            class="text-left mt-10 px-20 underline-container content bg-black bg-opacity-50 w-full h-full flex items-center">
+            <h1
+                class="animated-underline1 lg:text-5xl md:text-4xl sm:text-3xl max-[425px]:text-3xl font-semibold text-white text-left mb-10">
+                <span class="underline-text">About Us: </span>
+                Crafting Automotive Excellence
+            </h1>
+
+        </div>
+    </div>
+
+    <!-- experienceSection -->
+    <div class="w-9/12 mx-auto mt-20 flex flex-col md:flex-row lg:flex-row items-center justify-evenly">
+        <div class="w-full md:w-[40%] lg:w-[40%] ">
+            <h1 class="text-2xl md:text-3xl lg:text-5xl font-semibold text-center md:text-left lg:text-left my-5">
+                Experience superior car Repair with us</h1>
+            <p class="text-left">Quality repairs that you can trust every time means that you can rely on the repair
+                services to fix your vehicle
+                correctly, Efficiently, and safely. When you take your car.Quality repairs that you can trust every time
+                means that you can rely on the repair
+                services to fix your vehicle
+                correctly, Efficiently, and safely. When you take your car.Quality repairs that you can trust every time
+                means that you can rely on the repair
+                services to fix your vehicle
+                correctly, Efficiently, and safely. When you take your car</p>
+
+            <div class="py-10">
+
+                <hr class="h-0.5 bg-gray-400 w-full my-5">
+                <div class="flex justify-start mt-7">
+                    <div
+                        class="w-10 md:w-14 lg:w-14 h-10 md:h-14 lg:h-14 p-3 bg-red-500 rounded-full transition-all duration-500 hover:scale-110">
+                        <img src=" ./Asset/ServiceIcons/fSupport.png" class="w-full h-full" alt="">
+                    </div>
+                    <div class="mx-5">
+                        <h1 class="text-left text-2xl font-semibold">Friendly Support</h1>
+                        <p class=" text-xl text-left font-semibold transition-all duration-500 hover:text-red-500">
+                            Award-winning companies often excel in areas such as</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="w-[80%] flex justify-start  items-center my-5">
+
+                <h1 class="text-left text-2xl font-semibold">Follow Us :</h1>
+                <div class="flex justify-evenly items-center">
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/facebook.png" class="w-full h-full" alt=""></a>
+                    </div>
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/instagram.png" class="w-full h-full" alt=""></a>
+                    </div>
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/twitter.png" class="w-full h-full" alt=""></a>
+                    </div>
+                    <div
+                        class="w-12 h-12 p-3 bg-white transition-all duration-500 hover:bg-red-500 hover:scale-125 hover:border-2 hover:border-red-500 hover:rotate-[360deg] rounded-full mx-3">
+                        <a href="#"><img src=" ./Asset/ServiceIcons/discord.png" class="w-full h-full" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-full md:w-[40%] lg:w-[40%]">
+            <img src=" ./Asset/Images/working.jpg" class="w-full h-full" alt="">
+        </div>
+    </div>
+    <!-- partnersSection -->
+    <div class="w-9/12 mx-auto mt-20">
+        <h1 class="text-center font-semibold text-5xl">Our Honorable Partners</h1>
+        <div class="flex flex-row items-center flex-wrap justify-evenly my-5">
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/Asahi.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/Car-Accessories-PNG.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/carguru.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/Castrol_logo_2023.svg.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/NiloyLogo.jpg" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/tata.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/Toyota_Motor_North_America_logo_(2019).png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/a.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/b.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/c.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/d.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/e.png" alt="">
+            </div>
+            <div
+                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                <img class="w-full h-full" src="./Asset/partners/f.png" alt="">
+            </div>
+        </div>
+    </div>
 
 </body>
 
