Expert Section Complete

--- a/About.html
+++ b/About.html
@@ -54,6 +54,8 @@
     </div>
 
     <!-- experienceSection -->
+
+
     <div class="w-9/12 mx-auto mt-20 flex flex-col md:flex-row lg:flex-row items-center justify-evenly">
         <div class="w-full md:w-[40%] lg:w-[40%] ">
             <h1 class="text-2xl md:text-3xl lg:text-5xl font-semibold text-center md:text-left lg:text-left my-5">
@@ -113,63 +115,249 @@
         </div>
     </div>
     <!-- partnersSection -->
+
     <div class="w-9/12 mx-auto mt-20">
         <h1 class="text-center font-semibold text-5xl">Our Honorable Partners</h1>
         <div class="flex flex-row items-center flex-wrap justify-evenly my-5">
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/Asahi.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/Car-Accessories-PNG.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/carguru.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/Castrol_logo_2023.svg.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/NiloyLogo.jpg" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/tata.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/Toyota_Motor_North_America_logo_(2019).png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/a.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/b.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/c.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/d.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/e.png" alt="">
             </div>
             <div
-                class="w-[38%] md:w-[26%] lg:w-[15%]  mx-4 border border-black h-20 bg-white flex items-center px-2 my-4">
+                class="w-[38%] md:w-[26%] lg:w-[15%] mx-4 border-2 border-black h-20 bg-white flex items-center shadow-lg p-2 my-4">
                 <img class="w-full h-full" src="./Asset/partners/f.png" alt="">
             </div>
         </div>
     </div>
+
+
+    <!--TeamSection -->
+    <div class="text-left px-20 underline-container mt-20">
+        <h1 class="animated-underline lg:text-5xl md:text-4xl sm:text-3xl max-[425px]:text-3xl text-left mb-10">
+            Mastering Your Vehicle:<span class="underline-text">Expert Insights and Tips</span>
+        </h1>
+
+    </div>
+
+    <div class="my-20 w-full md:w-11/12 lg:w-9/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
+        <card class="bg-white p-10 shadow-lg transition-all duration-500 hover:scale-110">
+            <p class="text-justify my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A aliquam veritatis
+                voluptatem possimus hello tempora, laboriosam veniam eos nulla ad, recusandae inventore vitae corrupti
+                ut
+                dolor est culpa nam blanditiis optio!</p>
+            <div class="flex flex-row justify-between items-center">
+                <hr class="w-[60%] h-0.5 bg-black">
+                <div class="flex flex-row justify-center items-center">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+
+                </div>
+            </div>
+            <div class="flex flex-row justify-between items-center w-full mt-3">
+                <div class="flex flex-row justify-center items-center">
+                    <div class="w-14 h-14 me-5">
+                        <img class="w-full h-full rounded-full" src="./Asset/Images/expert.jpg" alt="">
+                    </div>
+                    <div class="text-left">
+                        <h1>David Marlo</h1>
+                        <p>Founder, CEO</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="w-14 h-14" src="./Asset/Images/comma.png" alt="">
+                </div>
+
+            </div>
+        </card>
+        <card class="bg-white p-10 shadow-lg transition-all duration-500 hover:scale-110">
+            <p class="text-justify my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A aliquam veritatis
+                voluptatem possimus tempora, laboriosam veniam eos nulla ad, recusandae inventore vitae corrupti ut
+                dolor est culpa nam blanditiis optio!</p>
+            <div class="flex flex-row justify-between items-center">
+                <hr class="w-[60%] h-0.5 bg-black">
+                <div class="flex flex-row justify-center items-center">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+
+                </div>
+            </div>
+            <div class="flex flex-row justify-between items-center w-full mt-3">
+                <div class="flex flex-row justify-center items-center">
+                    <div class="w-14 h-14 me-5">
+                        <img class="w-full h-full rounded-full" src="./Asset/Images/expert.jpg" alt="">
+                    </div>
+                    <div class="text-left">
+                        <h1>David Marlo</h1>
+                        <p>Founder, CEO</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="w-14 h-14" src="./Asset/Images/comma.png" alt="">
+                </div>
+
+            </div>
+        </card>
+        <card class="bg-white p-10 shadow-lg transition-all duration-500 hover:scale-110">
+            <p class="text-justify my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A aliquam veritatis
+                voluptatem possimus tempora, laboriosam veniam eos nulla ad, recusandae inventore vitae corrupti ut
+                dolor est culpa nam blanditiis optio!</p>
+            <div class="flex flex-row justify-between items-center">
+                <hr class="w-[60%] h-0.5 bg-black">
+                <div class="flex flex-row justify-center items-center">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+
+                </div>
+            </div>
+            <div class="flex flex-row justify-between items-center w-full mt-3">
+                <div class="flex flex-row justify-center items-center">
+                    <div class="w-14 h-14 me-5">
+                        <img class="w-full h-full rounded-full" src="./Asset/Images/expert.jpg" alt="">
+                    </div>
+                    <div class="text-left">
+                        <h1>David Marlo</h1>
+                        <p>Founder, CEO</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="w-14 h-14" src="./Asset/Images/comma.png" alt="">
+                </div>
+
+            </div>
+        </card>
+        <card class="bg-white p-10 shadow-lg transition-all duration-500 hover:scale-110">
+            <p class="text-justify my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A aliquam veritatis
+                voluptatem possimus tempora, laboriosam veniam eos nulla ad, recusandae inventore vitae corrupti ut
+                dolor est culpa nam blanditiis optio!</p>
+            <div class="flex flex-row justify-between items-center">
+                <hr class="w-[60%] h-0.5 bg-black">
+                <div class="flex flex-row justify-center items-center">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+                    <img class="w-5 h-5" src="./Asset/Images/star.png" alt="">
+
+                </div>
+            </div>
+            <div class="flex flex-row justify-between items-center w-full mt-3">
+                <div class="flex flex-row justify-center items-center">
+                    <div class="w-14 h-14 me-5">
+                        <img class="w-full h-full rounded-full" src="./Asset/Images/expert.jpg" alt="">
+                    </div>
+                    <div class="text-left">
+                        <h1>David Marlo</h1>
+                        <p>Founder, CEO</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="w-14 h-14" src="./Asset/Images/comma.png" alt="">
+                </div>
+
+            </div>
+        </card>
+    </div>
+
+    <!-- footerSection -->
+    <div>
+        <div class="mt-20 text-white p-20 grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 max-[425px]:grid-cols-1 gap-2"
+            style="
+                        background-image: url('./Asset/Images/footerBanner.jpg'); background-size: cover; background-position: center center;">
+            <div>
+                <span class="text-2xl underline font-semibold">Services</span>
+                <ul>
+                    <li><a href="#" target="_blank">Branding</a></li>
+                    <li><a href="#" target="_blank">Design</a></li>
+                    <li><a href="#" target="_blank">Design</a></li>
+                    <li><a href="#" target="_blank">Advertisement</a></li>
+                </ul>
+            </div>
+            <div>
+                <span class="text-2xl underline font-semibold">Legal</span>
+                <ul>
+                    <li><a href="#" target="_blank">Terms Of Service</a></li>
+                    <li><a href="#" target="_blank">Privacy Policy</a></li>
+                    <li><a href="#" target="_blank">Cookie Policy</a></li>
+                    <li><a href="#" target="_blank">Advertisement</a></li>
+                </ul>
+            </div>
+            <div>
+                <span class="text-2xl underline font-semibold">Social</span>
+                <ul>
+                    <li><a href="#" target="_blank">Twitter</a></li>
+                    <li><a href="#" target="_blank">Instagram</a></li>
+                    <li><a href="#" target="_blank">Facebook</a></li>
+                    <li><a href="#" target="_blank">Threads</a></li>
+                </ul>
+            </div>
+            <div>
+                <span class="text-2xl underline font-semibold">Company</span>
+                <ul>
+                    <li><a href="#" target="_blank">About Us</a></li>
+                    <li><a href="#" target="_blank">Contact Us</a></li>
+                    <li><a href="#" target="_blank">Jobs</a></li>
+                    <li><a href="#" target="_blank">Press kit</a></li>
+                </ul>
+
+            </div>
+        </div>
+
+
+    </div>
+
 
 </body>
 
